<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#22f1eaea"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Uogaa App"
        app:titleTextColor="#FFF" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backgroundcrop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:onClick="beforeage18"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:padding="5dp"
                        android:text="@string/before_age_18"
                        android:textColor="#FF000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:padding="5dp"
                        android:text="@string/days_60"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/every_day_15_min"
                        android:textColor="#ffff5722"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <pl.droidsonroids.gif.GifImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/exersice_7" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/baseline_keyboard_arrow_right_24" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/startyoga1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:text="@string/get_started"
                android:textAllCaps="true"
                android:textColor="#FFF"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backgroundcrop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:onClick="afterage18"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:padding="5dp"
                        android:text="@string/after_age_18"
                        android:textColor="#FF000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:padding="5dp"
                        android:text="@string/days_60_2"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/every_day_15_min_2"
                        android:textColor="#ffff5722"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <pl.droidsonroids.gif.GifImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/exersice_11" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/baseline_keyboard_arrow_right_24" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/startyoga2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:text="@string/get_started_2"
                android:textAllCaps="true"
                android:textColor="#FFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backgroundcrop"
            android:onClick="food"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:padding="5dp"
                        android:text="@string/nutrition_and_tips"
                        android:textColor="#ff000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/suggestion_for_free"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/food" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:padding="10dp"
                        android:src="@drawable/baseline_keyboard_arrow_right_24" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>

