<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/your_background"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:title="UOGAA"
        app:titleTextColor="@android:color/white"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="323dp"
        android:layout_height="482dp"
        android:layout_marginTop="144dp"
        android:src="@drawable/your_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/catchyMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/catchy_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="123dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catchyMessageTextView" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="175dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toTopOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
